@@ -1,3 +1,5 @@
+	- prepare for jpeg decompression to 8-bit color space
+
 15/8/2005:	v3.1.1
 	- fixed Dansk locale (#104084)
 	- new translations added
